--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Lab6_Gtics_20210751
+spring.datasource.url=jdbc:mysql://localhost:3306/lab6-20210751
+spring.datasource.username=root
+spring.datasource.password=root
+server.port=8080
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
